--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Google Tour</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
 <article>
