Add animation class

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Google Tour</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<script type="text/javascript" src="js/easing.js"></script>
+	<script type="text/javascript" src="js/animobj.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
@@ -31,7 +33,7 @@
 
 <section class="box">
 <h2>Visit Google Groups for great advice</h2>
-<div class="body">It's always helpfull to have a guide when planning a trip, so you check in with a couple million experts. Google Groups is a searchable database of more than 800 million Usenet posts on every imaginable topic, including unspoiled islands and low-cost airfare. Ask questions and read comments in Usenet discussion forums. Explore topics in detail by perusing posts that contain amateur advice, professional recommendations and everything in between.</div>
+<div class="body">It's always helpful to have a guide when planning a trip, so you check in with a couple million experts. Google Groups is a searchable database of more than 800 million Usenet posts on every imaginable topic, including unspoiled islands and low-cost airfare. Ask questions and read comments in Usenet discussion forums. Explore topics in detail by perusing posts that contain amateur advice, professional recommendations and everything in between.</div>
 </section>
 
 <section class="box">
