Fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section class="box">
 <h2>Explore ways to take your search further</h2>
-<div class="body">Work is hard and you need a break. A sun-soaked vaction is just the ticket, but where to begin? With Google there's a world of helpful, time-saving feetures right at your fingertips. To see how these free services can help you find what you're looking for faster, tag along as we plan a tropical vacation, or go straight to Google Services and Tools.</div>
+<div class="body">Work is hard and you need a break. A sun-soaked vacation is just the ticket, but where to begin? With Google there's a world of helpful, time-saving features right at your fingertips. To see how these free services can help you find what you're looking for faster, tag along as we plan a tropical vacation, or go straight to Google Services and Tools.</div>
 </section>
 
 <section class="box">
@@ -27,7 +27,7 @@
 
 <section class="box">
 <h2>Take the Google Toolbar with you</h2>
-<div class="body">Realizing you'll hit a lot of websites before you hit the beach, the first thing you pack is the Google Toolbar. Add it to your Internet Explorer and you can take Google with you anywhere on the web. It     takes only seconds to install and enables you to easily use Google without having to return to the homepage. <a href="" target="_blank">Download the Google Toolbar</a></div>
+<div class="body">Realizing you'll hit a lot of websites before you hit the beach, the first thing you pack is the Google Toolbar. Add it to your Internet Explorer and you can take Google with you anywhere on the web. It takes only seconds to install and enables you to easily use Google without having to return to the homepage. <a href="" target="_blank">Download the Google Toolbar</a></div>
 </section>
 
 
@@ -58,7 +58,7 @@
 
 </div><!-- /.box-container -->
 
-<p>You've seen a few of the ways to use Google that take you beyond the homepage. Their are many more time-saving options Google has to offer, including:</p>
+<p>You've seen a few of the ways to use Google that take you beyond the homepage. There are many more time-saving options Google has to offer, including:</p>
 <ul>
 	<li><a href="" target="_blank">Google Answers</a></li>
 	<li><a href="" target="_blank">Google Translate</a></li>
