--- a/index.html
+++ b/index.html
@@ -3,73 +3,125 @@
 <head>
 	<title>Google Tour</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
-	<script type="text/javascript" src="js/easing.js"></script>
-	<script type="text/javascript" src="js/animobj.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/animate.css" />
+	<!--script type="text/javascript" src="js/animator.js"></script-->
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 <article>
 
-<h1>Tour Google for a world of difference in how you search</h1>
+<h1 class="page-title">Tour Google for a world of difference in how you search</h1>
 
 
 <div class="box-container">
 
-<section class="box">
-<h2>Explore ways to take your search further</h2>
-<div class="body">Work is hard and you need a break. A sun-soaked vacation is just the ticket, but where to begin? With Google there's a world of helpful, time-saving features right at your fingertips. To see how these free services can help you find what you're looking for faster, tag along as we plan a tropical vacation, or go straight to Google Services and Tools.</div>
-</section>
+<section id="box-1" class="box-wrapper">
+	<div class="box">
+		<h2>Explore ways to take your search further</h2>
+		<div class="body">
+			<p>Work is hard and you need a break. A sun-soaked vacation is just the ticket, but where to begin?</p>
+			<p>With Google there's a world of helpful, time-saving features right at your fingertips. To see how these free services can help you find what you're looking for faster, tag along as we plan a tropical vacation, or go straight to <a href="http://www.google.com/about/products/" target="_blank">Google Services and Tools</a>.</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">S</div>
+</section><!-- /.box-wrapper -->
 
-<section class="box">
-<h2>Get the latest from Google News</h2>
-<div class="body">The destination determined, you decide to visit <a href="" target="_blank">Google News</a> to brush up on the very latest, so you'll be able to converse with the natives intelligently about the events of the day. Search and browse 4,000 leading news sources from around the world, with headlines and photos continuously updated automatically throughout the day. Click on a headline to be taken directly to the original source of the story you want to read.</div>
-</section>
+<section id="box-2" class="box-wrapper">
+	<div class="box">
+		<h2>Get the latest from Google News</h2>
+		<div class="body">
+			<p>The destination determined, you decide to visit <a href="http://news.google.com/" target="_blank">Google News</a> to brush up on the very latest, so you'll be able to converse with the natives intelligently about the events of the day.</p>
+			<p>Search and browse 4,000 leading news sources from around the world, with headlines and photos continuously updated automatically throughout the day. Click on a headline to be taken directly to the original source of the story you want to read.</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">E</div>
+</section><!-- /.box-wrapper -->
 
-<section class="box">
-<h2>Take the Google Toolbar with you</h2>
-<div class="body">Realizing you'll hit a lot of websites before you hit the beach, the first thing you pack is the Google Toolbar. Add it to your Internet Explorer and you can take Google with you anywhere on the web. It takes only seconds to install and enables you to easily use Google without having to return to the homepage. <a href="" target="_blank">Download the Google Toolbar</a></div>
-</section>
+<section id="box-3" class="box-wrapper">
+	<div class="box">
+		<h2>Take the Google Toolbar with you</h2>
+		<div class="body">
+			<p>Realizing you'll hit a lot of websites before you hit the beach, the first thing you pack is the Google Toolbar.</p>
+			<p>Add it to your Internet Explorer and you can take Google with you anywhere on the web. It takes only seconds to install and enables you to easily use Google without having to return to the homepage.</p>
+			<p><a href="http://www.google.com/toolbar/" target="_blank">Download the Google Toolbar</a></p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">A</div>
+</section><!-- /.box-wrapper -->
 
+<section id="box-4" class="box-wrapper">
+	<div class="box">
+		<h2>Visit Google Groups for great advice</h2>
+		<div class="body">
+			<p>It's always helpful to have a guide when planning a trip, so you check in with a couple million experts.</p>
+			<p><a href="http://groups.google.com/" target="_blank">Google Groups</a> is a searchable database of more than 800 million Usenet posts on every imaginable topic, including unspoiled islands and low-cost airfare.</p>
+			<p>Ask questions and read comments in Usenet discussion forums. Explore topics in detail by perusing posts that contain amateur advice, professional recommendations and everything in between.</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">R</div>
+</section><!-- /.box-wrapper -->
 
-<section class="box">
-<h2>Visit Google Groups for great advice</h2>
-<div class="body">It's always helpful to have a guide when planning a trip, so you check in with a couple million experts. Google Groups is a searchable database of more than 800 million Usenet posts on every imaginable topic, including unspoiled islands and low-cost airfare. Ask questions and read comments in Usenet discussion forums. Explore topics in detail by perusing posts that contain amateur advice, professional recommendations and everything in between.</div>
-</section>
+<section id="box-5" class="box-wrapper">
+	<div class="box">
+		<h2>Check out the views at Google Images</h2>
+		<div class="body">
+			<p>Refusing to allow a small setback like bad weather to dampen your spirits, you take a visual tour of other potential warm weather hot spots using Google Images where you can search more than 400 million photos, artworks and other graphics.</p>
+			<p>You enter the query <a href="http://www.google.co.uk/search?q=tropical+vacations" target="_blank">tropical vacations"</a> and click a thumbnail to see a largest image and the web page on which it's located.</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">C</div>
+</section><!-- /.box-wrapper -->
 
-<section class="box">
-<h2>Check out the views at Google Images</h2>
-<div class="body">Refusing to allow a small setback like bad weather to dampen your spirits, you take a visual tour of other potential warm weather hot spots using Google Images where you can search more than 400 million photos, artworks and other graphics. You enter the query "tropical vacations" and click a thumbnail to see a largest image and the web page on which it's located. </div>
-</section>
+<section id="box-6" class="box-wrapper">
+	<div class="box">
+		<h2>Product Search</h2>
+		<!--h2> Find great products with Product Search</h2-->
+		<div class="body">
+			<p>Having decided to soak your stress away in a home hot tub, you use <a href="http://www.google.com/products/" target="_blank">Product Search</a>, the new product search service from Google, to find the best deal on exactly the model you want to buy.</p>
+			<p>Froogle's objective results take you directly to the store selling the tub you're hot for. Use Froogle to locate the best deal on the exact products you want.</p>
+			<p>Searching through millions of relevant web sites, Google pinpoints sites offering any specific product you select, enabling you to save money and time.</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">H</div>
+</section><!-- /.box-wrapper -->
 
-<section class="box">
-<h2>Find great products with Product Search</h2>
-<div class="body">Having decided to soak your stress away in a home hot tub, you use Product Search, the new product search service from Google, to find the best deal on exactly the model you want to buy. Froogle's objective results take you directly to the store selling the tub you're hot for. Use Froogle to locate the best deal on the exact products you want. Searching through millions of relevant web sites, Google pinpoints sites offering any specific product you select, enabling you to save money and time.</div>
-</section>
+<section id="box-7" class="box-wrapper">
+	<div class="box">
+		<h2>I'm Feeling Lucky</h2>
+		<!--h2>For a quicker trip, try "I'm Feeling Lucky"</h2-->
+		<div class="body">
+			<p>You've found the perfect solution to melt your stress. All you need now are some tunes to set the mood. You type your favorite radio station's call letters into the Google search box and hit the button that says <a href="http://support.google.com/websearch/answer/30735" target="_blank">"I'm Feeling Lucky,"</a> which takes you directly to the first web page Google returned from your query.</p>
+			<p>When you know the exact name of the company, subject or person you're looking for, it's a pretty safe bet Google will deliver the site you want as the first result. Try it for yourself and see how lucky you really are...</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">_</div>
+</section><!-- /.box-wrapper -->
 
-<section class="box">
-<h2>For a quicker trip, try "I'm Feeling Lucky"</h2>
-<div class="body">You've found the perfect solution to melt your stress. All you need now are some tunes to set the mood. You type your favorite radio station's call letters into the Google search box and hit the button that says "I'm Feeling Lucky," which takes you directly to the first web page Google returned from your query. When you know the exact name of the company, subject or person you're looking for, it's a pretty safe bet Google will deliver the site you want as the first result. Try it for yourself and see how lucky you really are...</div>
-</section>
-
-<section class="box">
-<h2>Get equipped to search even further</h2>
-<div class="body">As you soak away in your bubbly corner of paradise, you consider how far Google was able to take you and contemplate other ways Google can improve your existence. You determine to learn more about Google by reviewing the <a href="" target="_blank">Gooogle Search Features</a> page. Starting... tomorrow.</div>
-</section>
+<section id="box-8" class="box-wrapper">
+	<div class="box">
+		<h2>Get equipped to search even further</h2>
+		<div class="body">
+			<p>As you soak away in your bubbly corner of paradise, you consider how far Google was able to take you and contemplate other ways Google can improve your existence.</p>
+			<p>You determine to learn more about Google by reviewing the <a href="http://www.google.com/help/features.html" target="_blank">Google Search Features</a> page. Starting... tomorrow.</p>
+		</div>
+	</div><!-- /.box -->
+	<div class="letter">!</div>
+</section><!-- /.box-wrapper -->
 
 </div><!-- /.box-container -->
 
 <p>You've seen a few of the ways to use Google that take you beyond the homepage. There are many more time-saving options Google has to offer, including:</p>
 <ul>
-	<li><a href="" target="_blank">Google Answers</a></li>
-	<li><a href="" target="_blank">Google Translate</a></li>
-	<li><a href="" target="_blank">Advanced Search</a></li>
-	<li><a href="" target="_blank">Google Book Search</a></li>
+	<li><a href="http://answers.google.com/" target="_blank">Google Answers</a></li>
+	<li><a href="http://translate.google.com/" target="_blank">Google Translate</a></li>
+	<li><a href="http://www.google.com/advanced_search/" target="_blank">Advanced Search</a></li>
+	<li><a href="http://books.google.com/" target="_blank">Google Book Search</a></li>
 </ul>
 
-<p>and <a href="" target="_blank">more</a>.</p>
-<p>Visit the <a href="" target="_blank">More Google products</a> page to see the complete list.</p>
+<p>and <a href="http://www.google.com/intl/en/about/products/" target="_blank">more</a>.</p>
+<p>Visit the <a href="http://www.google.com/intl/en/about/products/" target="_blank">More Google products</a> page to see the complete list.</p>
 <p>Bon Voyage!</p>
-<p>&copy;2006 Google</p>
+<p>&copy;2013 Google</p>
 
 </article>
 </body>
